<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_name">速派网销平台</string>
    <string name="company_name">济南速派信息技术有限公司</string>
    <string name="tel">13869173840</string>
    <string name="company_address">山东省桥区济安街9号楼2单元301</string>
    <string name="copyright">济南速派信息技术有限公司 2015</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">完善信息</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">个人信息</string>
    <string name="title_activity_new_store">新建店铺</string>
    <string name="title_activity_store">店铺主页</string>
    <string name="title_activity_my_order">当前订单</string>
    <string name="title_activity_cart">购物车</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_product">商品</string>
    <string name="title_activity_add_product">添加商品</string>
    <string name="title_activity_product_images">商品查询</string>
    <string name="title_activity_around">周边</string>
    <string name="title_activity_map">我的页面</string>
    <string name="title_activity_relocation">定位</string>
    <string name="title_activity_product_edit">商品修改</string>
    <string name="title_activity_dev">开发人员选项</string>
    <string name="title_activity_check_position">位置标识</string>
    <string name="title_activity_order_archive">订单历史</string>
    <string name="title_activity_product_viewonly">商品</string>
    <string name="title_activity_new_product_manually">添加商品</string>
    <string name="title_activity_store_edit">店铺修改</string>
    <string name="title_activity_profile_edit">个人信息修改</string>
    <string name="title_activity_ref">反馈建议</string>
    <string name="title_activity_appeal">找回账号</string>
    <string name="title_activity_cart_confirm">订单确认</string>
    <string name="title_activity_follower">关注者列表</string>
    <string name="title_activity_follower_detail">用户详情</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_help">使用帮助</string>
    <string name="title_activity_pro_apply">高级功能申请</string>
    <string name="title_activity_statistics">盘点统计</string>
    <string name="title_activity_image_preview">图片浏览</string>
    <string name="title_activity_pro_introduction">高级功能介绍</string>
    <string name="title_activity_password_change">修改密码</string>
    <string name="title_activity_password">输入密码</string>
    <string name="title_activity_clerk_register">售货员登入</string>
    <string name="title_activity_clerks">员工列表</string>
    <string name="title_activity_sales">销售页面</string>
    <string name="title_activity_product_search_result_list">产品搜索结果</string>
    <string name="title_activity_sales_history">销售历史</string>
    <string name="title_activity_clerk_detail">员工详情</string>
    <string name="title_activity_master">中控台</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_back">Back</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clipboard_empty">Clipboard empty</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_done">Done</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_google_shopper">Google Shopper</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_about">About</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_about">The official Android app of the open source ZXing barcode project.</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">将条形码放置于框内等待扫描完成</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google Books</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
    <string name="preferences_reverse_image_title">Reversed camera image</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="share_name">Share via barcode</string>
    <string name="title_about">Barcode Scanner v</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="bluetooth">蓝牙</string>
    <string name="ok">OK</string>
    <string name="ip_address">ip:</string>
    <string name="default_ip_address">192.168.123.100</string>
    <string name="port_number">port:</string>
    <string name="default_port_number">9100</string>
</resources>