<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RadioGroup
        android:id="@+id/rgPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="10sp"
        android:paddingRight="10sp">
        <RadioButton
            android:id="@+id/rbBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="15sp"
            android:text="@string/bluetooth" >
        </RadioButton>

    </RadioGroup>
    <TextView 
        android:id="@+id/tvPortInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:singleLine="false"
        android:textSize="15sp"
        android:paddingLeft="10sp"
        />
    <LinearLayout 
        android:id="@+id/llEthernet"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:visibility="gone"
    	android:paddingLeft="10sp"
    	android:paddingRight="10sp"
    	android:paddingBottom="10sp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
    	    android:padding="0sp"/> 
        <EditText 
            android:id="@+id/etIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_ip_address"
            android:hint=""/>
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number"/>
        <EditText 
            android:id="@+id/etPortNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/default_port_number"/>      
    </LinearLayout>
    <Button 
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="15sp"
        android:visibility="gone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ok"
        android:layout_margin="5sp"
        android:onClick="okButtonClicked"
        />   
</LinearLayout>
